# astrbot_plugin_qq_group_daily_analysis

./: .gitignore  CHANGELOG.md  README.md  _conf_schema.json  main.py  metadata.yaml  package.json  wrangler.jsonc
docs/: blog_platform_v1_spec.md
scripts/: debug_all_pdf_themes.py  debug_blog_export.py  mock_pdf_gen.py
src/application/blog_export/: __init__.py  builder.py  models.py  serializer.py
src/application/services/: analysis_application_service.py
src/domain/value_objects/: platform_capabilities.py
src/infrastructure/blog_export/: __init__.py  web_blog_binding_client.py  web_report_publisher.py
src/infrastructure/config/: config_manager.py
src/infrastructure/platform/: __init__.py  base.py  bot_manager.py  factory.py
src/infrastructure/reporting/: __init__.py  dispatcher.py  generators.py  html_publisher.py  web_report_publisher.py  web_report_service.py
src/infrastructure/scheduler/: retry.py  (+1 more)
src/shared/: constants.py  trace_context.py  web_report_renderer.py
src/utils/: resilience.py
worker/: .gitignore  README.md  package.json  pyproject.toml  wrangler.jsonc
worker/scripts/: sync_templates.py
worker/src/: __init__.py  index.py  index.ts  template_loader.py  web_report_renderer.py
worker/templates/HatsuneMiku/: activity_chart.html  chat_quality_item.html  pdf_template.html  quote_item.html  topic_item.html  user_title_item.html
worker/templates/lumen_motion/: activity_chart.html  activity_chart_pdf.html  image_template.html
worker/templates/scrapbook/: quote_item.html  topic_item.html
worker/templates/simple/: topic_item.html
(+32 files in other folders)
